# Commentron

./: .gitignore  README.md  agent_config.example.json  main.py  pyproject.toml  task.md
docs/: design.md  prompts.md
outputs/apple_demo/: report.md  result.json
outputs/apple_demo_v2/: report.md  result.json
outputs/url_run/: report.md  result.json
outputs/url_run_amzn/: report.md
outputs/url_run_deepseek/: report.md  result.json
outputs/url_run_fallback/: report.md  result.json
outputs/url_run_ipad/: report.md  result.json
outputs/url_run_verify/: result.json
outputs/url_run_verify2/: result.json
src/news_comment_agent/: __init__.py  backends.py  cli.py  config.py  generation.py  ingestion.py  models.py  patterns.py  pipeline.py  prompts.py  ranking.py  reddit_retrieval.py  reporting.py  understanding.py
src/news_comment_agent/sample_data/: apple_news.json  reddit_comments.json
tests/: test_pipeline.py
